force-app/main/default/objects/WEBXAccountEC__c/WEBXAccountEC__c.object-meta.xml
<CustomObject>
    <label>WebEx EC Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebEx EC Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>