force-app/main/default/objects/WEBXAccountEC__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <label>Default</label>
    <length>1</length>
    <type>Text</type>
</CustomField>