force-app/main/default/objects/WEBXAccountEC__c/fields/Webexid__c.field-meta.xml
<CustomField>
    <fullName>Webexid__c</fullName>
    <label>WebExID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>